testes corrigidos de alerta e funcionalidade alerta pronta ( falta ver a questão da data )